--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,35 @@ body {
   background-size: cover;
 }
 
+.logoimg{
+  width: 200px;
+  margin-bottom: 20px;
+}
+.bgnav{
+  /* background-color: rgb(205 104 169);; */
+  text-align: center;
+  /* padding-left: 200px; */
+  font-size: 30px;
+  /* margin-left: 200px; */
+  display: flex;
+  align-items:baseline;
 
+  
+}
+.bgcolnav{
+  background-color: yellow;
+  color: yellow;
+  /* margin-left: 50px; */
+}
+.linkcol{
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+}
+.linkcol:hover{
+  background-color: red;
+  color: white;
+}
 .homeimg {
   background-image: url('https://media.istockphoto.com/photos/computer-programmer-working-on-laptop-picture-id1265176772?b=1&k=20&m=1265176772&s=170667a&w=0&h=IHFnvxa3kvVTuZcEfPpCSGIFA_gNT7dIlGDR7eD2cFI=');
   background-repeat: no-repeat;
@@ -147,6 +175,26 @@ p {
 }
 
 .boxtxt {
-  /* background-color: red; */
   padding: 20px 10px;
 }
+
+.abouthead{
+  color: white;
+  text-align: left;
+  font-size: x-large;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
