--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,25 @@ body {
   background-size: cover; */
 }
 
+.logohead {
+  font-family: 'sample';
+  color: white;
+  font-size: 40px;
+}
 
+@media only screen and (max-width: 1200px) {
+  .logohead {
+    margin-top: 50px;
+    /* text-align: center; */
+  }
+}
 
 .background {
   background-image: url('https://t3.ftcdn.net/jpg/02/94/56/74/240_F_294567465_DYZmowkf1lBn3lxAvekHT9W5GT18DBSG.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vmax;
-  height: 50vmax;
+  width: 100%;
+  height: 50%;
 }
 
 .hometext {
@@ -30,27 +41,45 @@ body {
   margin-bottom: 20px;
 }
 
-.bgnav {
-  text-align: center;
-  font-size: 20px;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 30px;
-  margin-left: 400px;
-  /* flex-wrap: wrap; */
-  /* align-items: baseline; */
-  /* padding-left: 30%; */
-
-  /* padding-top: 90px; */
-
-}
-
 .mnavbar {
-  /* padding-left: 200px; */
-  /* text-align: 'center'; */
   display: flex;
-  flex-wrap: wrap;
+  width: 100%;
 }
+
+.bgnav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.bgcolnav {
+  display: flex;
+  justify-content: center;
+  /* padding: 100px; */
+  /* background-color: rebeccapurple; */
+}
+
+/* @media only screen and (max-width: 850px) {
+  .mnavbar1 {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .bgcolnav {
+    width: 100%;
+  }
+} */
+@media only screen and (max-width: 600px) {
+  .mnavbar {
+    text-align: center;
+  }
+
+}
+
+
+
+
 
 
 
@@ -248,6 +277,7 @@ p {
   text-align: center;
   padding-bottom: 20px;
 
+
 }
 
 .boxes h2 {
@@ -286,6 +316,7 @@ p {
 .serbox {
   background-color: white;
   text-align: center;
+  /* margin-top: 20px; */
 }
 
 .serbox p {
@@ -312,4 +343,62 @@ p {
   font-family: 'sample';
   src: url('./assets/fonts/RubikMarkerHatch-Regular.ttf');
 
+}
+
+
+
+/* #Form Styling */
+
+
+input[type=text] {
+  width: 200px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: lightblue;
+
+  padding: 12px 20px 12px 5px;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=email] {
+  width: 200px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: lightblue;
+  padding: 12px 20px 12px 5px;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=number] {
+  background-color: lightblue;
+  font-size: 16px;
+  width: 200px;
+  border-radius: 4px;
+  padding: 12px 20px 12px 5px;
+  box-sizing: border-box;
+
+}
+
+input[type=text]:focus {
+  width: 100%;
+}
+
+input[type=email]:focus {
+  width: 100%;
+}
+
+
+@media only screen and (max-width: 500px) {
+
+  #name,
+  #email,
+  #phone,
+  #message {
+    width: 100%;
+
+  }
 }
